[project]
name = "blogpost_creator"
version = "0.1.0"
description = "blogpost-creator using crewAI"
authors = [{ name = "bzescossia", email = "bezerraescossia@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[tool.hatch.build.targets.sdist]
include = ["src/blogpost_creator"]

[tool.hatch.build.targets.wheel]
include = ["src/blogpost_creator"]

[project.scripts]
blogpost_creator = "blogpost_creator.main:run"
run_crew = "blogpost_creator.main:run"
train = "blogpost_creator.main:train"
replay = "blogpost_creator.main:replay"
test = "blogpost_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
